# MPSoC4Drones_EmbeddedSystem

HLS/: Image_tb.cpp  image_processor.cpp
HLS/image_processor/: .cproject  .project  hls.app
HLS/image_processor/.apc/: autopilot.apfmapping
HLS/image_processor/solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json
HLS/image_processor/solution1/.autopilot/: .automg_exit  .autopilot_exit
ROS2/: cpp_camera_node_subscriber.cpp
ROS2/assignment2_ws_f/install/: local_setup.sh  setup.sh
ROS2/assignment2_ws_f/src/install/: local_setup.sh  setup.sh
ROS2/assignment2_ws_f/src/my_camera_node/: CMakeLists.txt  camera_node_3.py  camera_node_3.py.save
ROS2/assignment2_ws_f/src/my_camera_node/src/: cpp_camera_node_subscriber.cpp
Vitis/: .analytics
Vitis/.metadata/: version.ini
Vitis/.metadata/.plugins/com.xilinx.sdk.utils/: dialog_settings.xml
Vitis/.metadata/.plugins/com.xilinx.sdsoc.ui/: dialog_settings.xml
Vitis/.metadata/.plugins/com.xilinx.sdx.core/: dialog_settings.xml
Vitis/.metadata/.plugins/org.eclipse.cdt.core/: Image_Processing_test_bench_system.1699285296235.pdom  Image_processing_test_system.1699021111800.pdom
Vitis/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
Vitis/Image_Processing_test_bench/: .cproject  .project  Image_Processing_test_bench.prj
Vitis/Image_Processing_test_bench/_ide/: hwspec.checksum
Vitis/Image_Processing_test_bench/src/: helloworld.c
Vitis/Image_Processing_test_bench_system/: .cproject  .project  Image_Processing_test_bench_system.sprj
Vitis/Image_processing_test/: .cproject  .project  Image_processing_test.prj
Vitis/Image_processing_test/_ide/: hwspec.checksum
Vitis/Image_processing_test/src/: helloworld.c
Vitis/Image_processing_test_system/: .cproject  .project  Image_processing_test_system.sprj
Vitis/u96v2_sbc_mp4d/: .cproject  platform.spr  platform.tcl
Vitis/u96v2_sbc_mp4d/zynqmp_fsbl/: fsbl_a53.elf
Vitis/u96v2_sbc_mp4d/zynqmp_pmufw/: pmufw.elf
Vitis/u96v2_sbc_mp4d_1/: .cproject  platform.spr  platform.tcl
Vitis/u96v2_sbc_mp4d_1/zynqmp_pmufw/: pmufw.elf
im_pros_IP/: component.xml
im_pros_IP/hdl/vhdl/: im_pros_control_s_axi.vhd
im_pros_IP/xgui/: im_pros_v1_0.tcl
src/: bd.tcl  system-user.dtsi
(+149 files in other folders)
